--- a/Master Thesis/diplomski.tex
+++ b/Master Thesis/diplomski.tex
@@ -77,7 +77,7 @@ Bioinformatics is an interdisciplinary field of research that has had a tremendo
 \subsection{The Process of Sequencing \& Assembly}
 \label{subsec:the process of sequencing and assembly}
 
-In an ideal world, we would extract a human genome in the form of DNA from a cell, input it into a \textit{sequencer}, and get a complete and accurate sequence of a DNA molecule as output with no \textit{base pairs} (adenine, cytosine, guanine and thymine) missing, which we could immediately use for further studying. Unfortunately, this perfect process is not (yet) a reality and it is hard to predict when this might become so. Due to this, we have to make due with sequencers that can only output genomes in the form of thousands of fragmented \textit{reads}, in our case at a median length of between 15 - 25 kilobase pairs (kbp) long, with shorter read sequencers sequencing reads at lengths of around 150 base pairs (bp) long in a process called \textit{shotgun sequencing}. There are also ultra-long reads with a maximum length of around 1 Mbp with a median length of 75 kbp, but these are not used for our experiments, as they are also of a smaller precision, something which is crucial for the success of our application. An average genome is much longer than that, e.g. the yeast genome is around 12 Mb long \cite{yeast} and the human genome is around 6.4 Gb long \cite{human}, so after sequencing, we need to assemble these short reads into longer ones before going further into analysis.
+In an ideal world, we would extract a human genome in the form of DNA from a cell, input it into a \textit{sequencer}, and get a complete and accurate sequence of a DNA molecule as output with no \textit{base pairs}\footnote{The four base pairs that constitute DNA are: adenine, cytosine, guanine, and thymine.} missing, which we could immediately use for further studying. Unfortunately, this perfect process is not (yet) a reality and it is hard to predict when this might become so. Due to this, we have to make due with sequencers that can only output genomes in the form of thousands of fragmented \textit{reads}, in our case at a median length of between 15 - 25 kilobase pairs (kbp) long, with shorter read sequencers sequencing reads at lengths of around 150 base pairs (bp) long in a process called \textit{shotgun sequencing}. There are also ultra-long reads with a maximum length of around 1 Mbp with a median length of 75 kbp, but these are not used for our experiments, as they are also of a smaller precision, something which is crucial for the success of our application. An average genome is much longer than that, e.g. the yeast genome is around 12 Mb long \cite{yeast} and the human genome is around 6.4 Gb long \cite{human}, so after sequencing, we need to assemble these short reads into longer ones before going further into analysis.
 
 This process of assembling shorter reads into larger structures, called \textit{contigs}, is called \textit{assembly}, depicted as steps one through three in Figure \ref{fig:genome assembly}. We can use the overlaps between sequences (step two in Figure \ref{fig:genome assembly}) to build graphs in which each read is represented with a node, and each overlap between reads is represented with an edge in the graph. An overlap can be described as a match between two reads' \textit{ends}, i.e. the read's prefix (start) and suffix (end), which can come in the form of a prefix - suffix or an suffix - prefix overlap. The length of this overlap can indicate a stronger similarity between two reads, and therefore a stronger link in the graph between them. After we have found enough strong overlaps, we can finally combine reads into contigs. Lastly, we are tasked with finding the longest possible path on this graph to connect the individual contigs and form a complete genome. We also need to orient them properly, depicted as step four in Figure \ref{fig:genome assembly}.
 
@@ -114,7 +114,7 @@ Another reason why we use the CSV file format is because of the Raven assembler 
 6647 [3323] LN:i:10656 RC:i:1,6638 [3319] LN:i:10224 RC:i:1,1,39680 10347 0 0.990291
 6639 [3319] LN:i:10224 RC:i:1,6646 [3323] LN:i:10656 RC:i:1,1,39681 9915 0 0.990291
 \end{lstlisting}
-First, we have the index of the first read. Then, in square brackets, we have the index of the original first read (each virtual read forms a pair with an original read). We then have some read information, followed by the second read with which the first one forms an overlap, along with its own information. Lastly, we have three fields that represent the overlap length, the weight of the overlap (not used in this thesis) and its score, measured in the percentage of the overlap match (note: overlaps do not need to be perfect). Each line essentially represents an edge in our graph between two nodes. The first $n$ lines in the file, where $n$ is the number of reads, represent the overlap between the original and virtual read. They are then followed by all other overlaps.
+First, we have the index of the first read. Then, in square brackets, we have the index of the original first read\footnote{Each virtual read forms a pair with an original read.}. We then have some read information, followed by the second read with which the first one forms an overlap, along with its own information. Lastly, we have three fields that represent the overlap length, the weight of the overlap (not used in this thesis) and its score, measured in the percentage of the overlap match\footnote{Overlaps do not need to be perfect to be used successfully.}. Each line essentially represents an edge in our graph between two nodes. The first $n$ lines in the file, where $n$ is the number of reads, represent the overlap between the original and virtual read. They are then followed by all other overlaps.
 
 \subsubsection{GFA}
 \label{subsubsec:gfa}
@@ -475,7 +475,7 @@ There are a lot of readily available datasets for experimenting on graphs and ge
 
 \subsection{Simulating \& Mutating Reads}
 
-Generating the reads for the dataset is a multi-step process. The yeast genome was stored in a simple FASTA file (section \ref{subsubsec:fasta and fastq}) with the chromosomes written down in order. In the first step, we would simply extract the desired chromosome from the FASTA file or use the entire file for the genome-wide dataset. In the next step, in order to simulate fragmented chromosomes like if they were obtained in the process of shotgun sequencing (section \ref{subsec:the process of sequencing and assembly}), we needed to generate artificial reads from the chromosome. This was done using the \texttt{seqrequester}\footnote{https://github.com/marbl/seqrequester} package and its \texttt{generate} functionality for generating reads. By setting the \texttt{-nreads} flag to the desired number, we could specify the number of reads the program would generate, and using the \texttt{-distribution} flag, we could choose the desired distribution for the reads (in our case, \texttt{pacbio-hifi}). We did this $n$ times, where $n$ is the number of graphs we wanted to generate for training, usually 100 for training and one for validation. After this was done, we ended up with $n$ files filled with simulated reads. We used a small C++ program\footnote{Courtesy of R. Vaser} to mutate these reads into new ones of the same length with a mutation frequency of 0.01, meaning that every 100 base pairs, a base pair would get mutated into its complement base pair. Now, if the original simulated reads represented the mother's reads, these mutated ones could be thought of as the father's reads. Lastly, we combined the father's and mother's reads from each of the $2n$ ($n$ for the father's and $n$ for the mother's reads) files into a single file by concatenating them, which left us with $n$ files that were ready for the final sequencing process where we would obtain contigs and their overlaps which we could use for training our model.
+Generating the reads for the dataset is a multi-step process. The yeast genome was stored in a simple FASTA file (section \ref{subsubsec:fasta and fastq}) with the chromosomes written down in order. In the first step, we would simply extract the desired chromosome from the FASTA file or use the entire file for the genome-wide dataset. In the next step, in order to simulate fragmented chromosomes like if they were obtained in the process of shotgun sequencing (section \ref{subsec:the process of sequencing and assembly}), we needed to generate artificial reads from the chromosome. This was done using the \texttt{seqrequester}\footnote{https://github.com/marbl/seqrequester} package and its \texttt{generate} functionality for generating reads. By setting the \texttt{-nreads} flag to the desired number, we could specify the number of reads the program would generate, and using the \texttt{-distribution} flag, we could choose the desired distribution for the reads (in our case, \texttt{pacbio-hifi}). We did this $n$ times, where $n$ is the number of graphs we wanted to generate for training, usually 100 for training and one for validation. After this was done, we ended up with $n$ files filled with simulated reads. We used a small C++ program\footnote{Courtesy of R. Vaser.} to mutate these reads into new ones of the same length with a mutation frequency of 0.01, meaning that every 100 base pairs, a base pair would get mutated into its complement base pair. Now, if the original simulated reads represented the mother's reads, these mutated ones could be thought of as the father's reads. Lastly, we combined the father's and mother's reads from each of the $2n$ ($n$ for the father's and $n$ for the mother's reads) files into a single file by concatenating them, which left us with $n$ files that were ready for the final sequencing process where we would obtain contigs and their overlaps which we could use for training our model.
 
 \begin{figure}[h]
 	\centering
@@ -498,7 +498,7 @@ We found that generating 5000 - 10 000 reads gave satisfactory results in combin
 \end{figure}
 \footnotetext{https://graphia.app/}
 
-After Raven is done with the assembly process, it outputs two files: a GFA file (section \ref{subsubsec:gfa}) and CSV file (section \ref{subsubsec:csv}). They both contain information about the contigs and their overlaps in a format suitable for generating a graph. They also contained different information in each, so to fully utilize all the graph information we had available to us, we needed to use both files. From the GFA file, we extract information about which contig belongs to the mutated reads and which one to the original simulated ones, as well as contig overlap length information. We extract them to a separate file for easier analysis and quicker fetching. An example of a graph obtained after assembly can be seen in Figure \ref{fig:graph}. Now, as we previously mentioned, our task is to separate the contigs into the father's and the mother's genome. In other words, if we are presented with a graph where nodes represent contigs and edges represent the overlaps between them, we need to remove edges between contigs that don't belong to the same parent. So for each edge, we specify if it's "correct" (i.e. it connects two contigs belonging to the same parent) or "incorrect" (it connect two contigs belonging to different parents).
+After Raven is done with the assembly process, it outputs two files: a GFA file (section \ref{subsubsec:gfa}) and CSV file (section \ref{subsubsec:csv}). They both contain information about the contigs and their overlaps in a format suitable for generating a graph. They also contained different information in each, so to fully utilize all the graph information we had available to us, we needed to use both files. From the GFA file, we extract information about which contig belongs to the mutated reads and which one to the original simulated ones, as well as contig overlap length information. We extract them to a separate file for easier analysis and quicker fetching. An example of a graph obtained after assembly can be seen in Figure \ref{fig:graph}. Now, as we previously mentioned, our task is to separate the contigs into the father's and the mother's genome. In other words, if we are presented with a graph where nodes represent contigs and edges represent the overlaps between them, we need to remove edges between contigs that don't belong to the same parent. So for each edge, we specify if it's "correct",i.e. it connects two contigs belonging to the same parent, or "incorrect", meaning it connect two contigs belonging to different parents.
 
 We now have a dataset where each edge has a label, as well as a feature in the form of overlap length. The ratio of the non mutated nodes compared to the mutated nodes is on average around 2.5, while the ratio of labels is roughly 40:60, which is fairly balanced and good enough for the task we are trying to solve. That being said, after separation, only one of the haplotypes is well defined, with the other one being highly fragmented and incomplete. This can be seen in Figure \ref{fig:separated graph}. We suspect this is in part happening due to the way Raven assembles contigs, as it isn't optimized for pacbio-hifi data. Looking into this is outside the scope of this thesis, but is worth exploring in more detail in further work. Nevertheless, we can hope of successfully extracting at least one haplotype, which is enough to prove that the problem statement of this thesis is feasible: separating haplotypes is a task that can be effectively solved by employing deep learning. With all that being said, we can now use the dataset we created as input to our model in which we will load it into memory, generate additional features and transform it into a format fit for training.
 
@@ -549,7 +549,7 @@ class EGATModel(nn.Module):
 		self.bn3 = nn.BatchNorm1d(int(out_dim / 2))
 		self.bn4 = nn.BatchNorm1d(int(out_dim / 4))
 \end{lstlisting}
-First, we initialize a linear layer that transforms the node features (number of in and out node degrees) into a higher dimension of size \texttt{node\_features}. Then, we define four EGAT layers. The first layer is of the largest width \texttt{hidden\_dim} (both for node and edge features), and subsequent layers divide this size by two in each step. Only the first layer used a \texttt{num\_heads} number of attention heads, while the rest used only one. This is done to improve training times, as this network proved much slower than the other ones we used. After all the EGAT layers are done with their computations, we pass everything through a classification layer. This layer works by taking the new calculated node and edge features and concatenating them before passing them into a fully connected ANN layer for the final classification. The network then finally outputs a list of class probabilities for every edge in the graph.
+First, we initialize a linear layer that transforms the node features\footnote{In our case, the number of in node degrees and out node degrees.} into a higher dimension of size \texttt{node\_features}. Then, we define four EGAT layers. The first layer is of the largest width \texttt{hidden\_dim} for both node and edge features, and subsequent layers divide this size by two in each step. Only the first layer used a \texttt{num\_heads} number of attention heads, while the rest used only one. This is done to improve training times, as this network proved much slower than the other ones we used. After all the EGAT layers are done with their computations, we pass everything through a classification layer. This layer works by taking the new calculated node and edge features and concatenating them before passing them into a fully connected ANN layer for the final classification. The network then finally outputs a list of class probabilities for every edge in the graph.
 
 You may have noticed that in some layers, we multiply the input dimension for the EGAT layer with \texttt{num\_heads}. This is done because we can't just pass through the ensuing vector from the previous EGAT layer due to it having an additional dimension accounting for attention heads. Because of this, it needs to be \textit{flattened}, i.e. concatenated in the dimension of attention heads to form a \texttt{num\_heads} times longer vector in a different dimension before being passed to the next layer. Aside from this, we also employ a few regularization mechanisms such as \textit{dropout} and batch normalization (section \ref{subsubsec:regularization functions}) to reduce overfitting (section \ref{subsec:the training process}). Dropout is dimension agnostic and can be used on any layer, while batch normalization requires a different definition for every layer.
 
@@ -578,7 +578,7 @@ All of the previously described functions are connected in the \texttt{main} fun
 
 In Figure \ref{fig:model}, we can see the general structure of one of our models, specifically, the model using the EGAT layers (section \ref{subsubsec:edge graph attention network}). We will explain only this model in detail as it is the most complicated one we used, as well as because all of the other models being fairly similarly defined.
 
-In the first step, we take node features (node in and out degrees) as input to a linear layer. The dimension of each of these feature vectors is $n$, where $n$ is the number of nodes in the current graph being processed. The purpose of this linear layer is to increase the size of the features from two to a larger number $m_1$ (usually 64 or 128), thereby extracting useful information from them and successfully representing it with a suitable dimension.
+In the first step, we take node features in the form of node in and out degrees as input to a linear layer. The dimension of each of these feature vectors is $n$, where $n$ is the number of nodes in the current graph being processed. The purpose of this linear layer is to increase the size of the features from two to a larger number $m_1$ (usually 64 or 128), thereby extracting useful information from them and successfully representing it with a suitable dimension.
 
 We then have a $n \times m_1$ matrix, which we use as input to the first EGAT layer along with the node features we use (edge overlap lengths) and the graph structure. After the EGAT layer has performed its calculations, it outputs two vectors of size $n \times m_2 \times a$ and $e \times m_2 \times a$, where $m_2$ is the output size of the first EGAT layer (up to four times larger than $m_1$), $a$ is the number of attention heads (usually three) and $e$ is the number of edges. The two vectors represent the learned features of the nodes and edges respectively. They are then passed through an ELU activation function (section \ref{subsubsec: nonlinearities}) which acts as a nonlinearity, followed with the dropout mechanism (section \ref{subsubsec:regularization functions}). This is then finally passed through batch normalization (section \ref{subsubsec:regularization functions}).
 
@@ -610,7 +610,7 @@ During training, we used a version od Adam implemented in PyTorch (section \ref{
 \subsection{Training \& Validation}
 \label{subsec:the training process}
 
-After we generated our dataset of $n$ graphs (101 for both the dataset with only one chromosome and the whole genome), we used 100 graphs for training and one for validation. This is done to prevent \textit{overfitting}. During overfitting, as our model trains on the training part of the dataset, it starts to memorize the data in our dataset by heart. This may sound good, but it actually leads to poor \textit{generalization}, i.e., it cannot perform well on other similar data, only on the data it was trained on. To alleviate this, we separate a smaller validation dataset from the main one that the model doesn't train on. By validating our performance on it, we can get a more accurate state of the performance of our model. As the model starts overfitting, performance on the train part of the dataset will continue to improve, while on the validation part, it will start to lower. We can then take the step where the model performed best on the validation dataset as the best version of our model.
+After we generate our dataset of $n$ graphs\footnote{In our case, this was 101 graphs for both the dataset with only one chromosome and the whole genome.}, we use $n - 1$ graphs for training and one for validation. This is done to prevent \textit{overfitting}. During overfitting, as our model trains on the training part of the dataset, it starts to memorize the data in our dataset by heart. This may sound good, but it actually leads to poor \textit{generalization}, i.e., it cannot perform well on other similar data, only on the data it was trained on. To alleviate this, we separate a smaller validation dataset from the main one that the model doesn't train on. By validating our performance on it, we can get a more accurate state of the performance of our model. As the model starts overfitting, performance on the train part of the dataset will continue to improve, while on the validation part, it will start to lower. We can then take the step where the model performed best on the validation dataset as the best version of our model.
 
 Aside from this, validation can also be used for tuning \textit{hyperparameters} of our model, i.e. parameters that aren't adjusted during training, but are set before it. In that case, as some of the information from the validation dataset leaks into the training,  we also need to create a test dataset that will now fulfill the role that validation has fulfilled previously: generalization testing. In this thesis, we don't do this as most of the hyperparameters we used are set to default values and we aren't concerned with state-of-the-art performance as much as testing out if the concept of haplotype separation works with GNNs, as well as what methods work the best.
 
@@ -624,17 +624,16 @@ There are numerous important hyperparameters that can be adjusted to optimize tr
 \chapter{Results}
 \label{ch:results}
 
-In this chapter, we will present the results obtained in the experiments we performed for this thesis. First, we will go over the experiments er performed on only one chromosome (section \ref{sec:experiments on one chromosome}), and then over the experiments we performed on the whole genome (section \ref{sec:experiments on the whole genome}).
+In this chapter, we will present the results obtained in the experiments we performed with the purpose of answering this thesis' main question: can GNNs be used to separate haplotypes. First, we will go over the experiments we performed on only one chromosome (section \ref{sec:experiments on one chromosome}), and then over the experiments we performed on the whole genome (section \ref{sec:experiments on the whole genome}).
 
 \section{Performance Metrics}
 
-Here, we will briefly explain all the different metrics for evaluating model performance during training that we used. These include accuracy (section \ref{subsec:accuracy}), F1 score along with recall and precision (section \ref{subsec:f1 score}) and model loss (section \ref{subsec:loss function}).
+Here, we will briefly explain all the different metrics for evaluating model performance during training that we used. These include accuracy (section \ref{subsec:accuracy}), F1 score along with recall and precision (section \ref{subsec:f1 score}), and model loss (section \ref{subsec:loss function}).
 
 \subsection{Accuracy}
 \label{subsec:accuracy}
 
-Accuracy is a simple and reliable metric used for assessing model performance that is quite popular and widespread due to its interpretability and easy to understand nature. It can be described as the number of correctly classified examples divided by the total number of examples in the dataset. With that being said, it does have its limits. In the case when the dataset is severely imbalanced, i.e. there are significantly more examples of one class compared to the other, e.g. \textit{true} vs. \textit{false}, it will always display a high value by simply always guessing \textit{true}. Fortunately, this is not the case for our dataset, as we have a fairly similar number of correct and incorrect examples (section \ref{ch:dataset}). Accuracy can also be defined with the following equation:
-
+Accuracy is a simple yet reliable metric used for assessing model performance that is quite popular and widespread due to its interpretability and easy to understand nature. It can be described as the number of correctly classified examples divided by the total number of examples in a dataset. With that being said, it does have its limitations. In the case when the dataset is severely imbalanced, i.e. there are significantly more examples of one class compared to the other, e.g. \textit{true} vs. \textit{false}, it will always display a high value by simply always guessing \textit{true}\footnote{Or whichever class is more prevalent.}. Fortunately, this is not the case for our dataset, as we have a fairly similar number of correct and incorrect examples (section \ref{ch:dataset}). We can define accuracy with the following equation:
 \[ \mathrm{Accuracy} = \frac{\mathrm{TP} + \mathrm{TN}}{\mathrm{TP} + \mathrm{TN} + \mathrm{FP} + \mathrm{FN}} \]
 Put into words, it is the number of \textit{true positive} examples (everything our model classified correctly) and \textit{true negative} examples (everything our model did not classify correctly) divided by all examples in the dataset.
 
@@ -642,46 +641,42 @@ Put into words, it is the number of \textit{true positive} examples (everything 
 \label{subsec:f1 score}
 
 F1-score is a more complex metric than the previously described accuracy score, but is also more informative about model results. It belongs to a family of scores known as \textit{F-scores}, which can be described with the following equation:
-
-\[ F_1 = (1 + \beta^2) \cdot \frac{\mathrm{precision} \cdot \mathrm{recall}}{\beta^2 \cdot \mathrm{precision} + \mathrm{recall}} \] where \[ \mathrm{precision} = \frac{\mathrm{TP}}{\mathrm{TP} + \mathrm{FP}} \] \[ \mathrm{recall} = \frac{\mathrm{TP}}{\mathrm{TP} + \mathrm{FN}} \]
+\[ F_1 = (1 + \beta^2) \cdot \frac{\mathrm{precision} \cdot \mathrm{recall}}{\beta^2 \cdot \mathrm{precision} + \mathrm{recall}} \] where:
+\[ \mathrm{precision} = \frac{\mathrm{TP}}{\mathrm{TP} + \mathrm{FP}} \]
+\[ \mathrm{recall} = \frac{\mathrm{TP}}{\mathrm{TP} + \mathrm{FN}} \]
 Precision measures how many of the examples we classified as positive are truly positive, while recall measures how many of the positive examples present in the dataset our model actually classified as positive.
 
 F1-score is a version of F-score where the $\beta$ parameter is set to 1, which in turn simplifies the equation to:
-
 \[ \mathrm{F_1} = 2 \frac{\mathrm{precision} \cdot \mathrm{recall}}{\mathrm{precision} + \mathrm{recall}} \]
-Intuitively, it can be described as the harmonic mean between the precision and recall metrics and is often used as a more data agnostic version of those metrics.
+Intuitively, it can be described as the harmonic mean between the precision and recall metrics and is often used as a more data agnostic metric compared to accuracy, as well as to recall and precision themselves.
 
 \subsection{Loss Function}
 \label{subsec:loss function}
 
-As our model falls into the classification category, for the loss function, we used \textit{cross entropy loss}, also know as \textit{logistic loss}. It works by taking the \textit{logits} our model generates as output and compares them against true labels. Logits are vectors of size $n$, where $n$ is the number of classes we have predicted for every data entry. For instance, if we have three examples in our dataset that we need to classify into seven classes, the size of our matrix would be $7 \times 3$. This matrix is compared to the \textit{one-hot} encoded classes of the data. One-hot encoded vectors are also of size $n$, but with only their true class for the example set to 1, and everything else to 0. They are compared with the following equation:
-
+As our model falls into the classification category, for the loss function, we used \textit{cross entropy loss}, also know as \textit{logistic loss}. It works by taking the \textit{logits} our model generates as output and comparing them against true class labels. Logits are vectors of size $n$, where $n$ is the number of classes we have predicted for every data entry. For instance, if we have three examples in our dataset that we need to classify into seven classes, the size of our matrix would be $7 \times 3$. This matrix is compared to the \textit{one-hot} encoded classes of the data. One-hot encoded vectors are also of size $n$, but with only their true class for the example set to 1, and everything else set to 0. They are compared using the following equation:
 \[ L = - \sum_{i = 1}^n t_i \log (p_i) \]
-where $t_i$ is either a 1 or a 0 (truth label) for class $i$, and $p_i$ is the probability for class $i$. If we are only using two classes (which we indeed are), we can simplify this to \textit{binary cross entropy loss} represented with the following equation:
-
+where $t_i$ is either a 1 or a 0 (truth label) for class $i$, and $p_i$ is the probability for class $i$, obtained after passing the logits through a sigmoid or softmax function (section \ref{subsubsec: nonlinearities}). If we are only using two classes\footnote{Which we indeed are.}, we can simplify this to \textit{binary cross entropy loss} represented with the following equation:
 \[ L = - [t \log (p) + (1 - t) \log (1 - p)] \]
-A smaller value is better, so by minimizing this loss, we can train our model. Due to its logarithmic nature, it heavily penalizes values straying from 0, which is the ideal value of the function \cite{CEL}.
-
-It is also worth noting that the loss function doesn't take logits as input directly, but class probabilities instead, obtained by passing the logits through a softmax function (section \ref{subsubsec: nonlinearities}).
+A smaller value for $L$ is better, so by minimizing this loss, we can train our model. Due to its logarithmic nature, it heavily penalizes values straying from 0, which is the ideal value of the function \cite{CEL}.
 
 \section{Experiments on One Chromosome}
 \label{sec:experiments on one chromosome}
 
-The results of the experiments we performed on one chromosome are presented through three graphs: accuracy, F1 score and loss. We will only display validation graphs, as training graphs are often an unreliable indicator of performance due to them almost certainly overfitting. In addition, we will only display a few different experiments we performed for clarity, even though there were many more. Lastly, we only display the first 200 epochs of training, as all of the models reached their peak performance up to that point.
-
-\subsection{Accuracy \& F1 Score}
+The results of the experiments we performed on one chromosome are presented through three graphs over time: accuracy, F1-score and loss, all described in the previous section. We will only display graphs of the validation part of the dataset, as training dataset graphs are often an unreliable indicator of performance due to them almost certainly overfitting (section \ref{subsec:the training process}). In addition, we will only display a few different experiments we performed for clarity, even though there were many more. Lastly, we only display the first 200 epochs of training, as all of the models reached their peak performance up to that point.
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\textwidth]{images/accuracy_val.png}
 	\includegraphics[width=\textwidth]{images/f1_val.png}
-	\caption[Accuracy and f1 graph]{Two graphs representing the model training performance on the validation part of the dataset. Above, we have the accuracy graph and below it, we can see an F1 score graph. Epochs are displayed on the $x$ axis, while on the $y$ axis, we have the respective performance metric of either accuracy or F1 score. The graphs were obtained using TensorBoard (section \ref{sec:technology stack}).}
+	\caption[Accuracy and f1 graph]{Two graphs displaying performance on the validation part of the dataset of a few different models. Above, we have the accuracy graph. Below it, we can see an F1-score graph. Epochs are displayed on the $x$ axis, while on the $y$ axis, we have the respective performance metric of either accuracy or F1-score. The graphs were obtained with the help of TensorBoard (section \ref{sec:technology stack}).}
 	\label{fig:accuracy and f1 graph}
 \end{figure}
 
-The first two graphs we are going to look at are an accuracy graph and an F1 score graph (Figure \ref{fig:accuracy and f1 graph} top, Figure \ref{fig:accuracy and f1 graph} bottom). We are going to analyze both of them at the same time due to their similarity. There are four model results displayed here. In red, a GATv2 model (section \ref{subsubsec:graph attention networks}) with dropout set to 0.5 and edge overlaps used as edge weights in the GCN layers is displayed. In blue, we have the same model, but without using edge overlaps. Their performance is nearly similar, proving that this way of using edge overlaps is rather inefficient. In orange, we use GCN model (section \ref{subsubsec:graph convolutional netwroks}) with dropout set to 0.2 and edge overlaps used. We can see that it is of a very similar performance, meaning that the GAT layers extract little additional information from the model.
+\subsection{Accuracy \& F1-Score}
 
-The standout model here is the pink model. It has greatly outperformed the rest of the models, with an accuracy of 87.9\%. This is because here we used an EGAT model (section \ref{subsubsec:edge graph attention network}), which uses edge features much more effectively by incorporating them into the attention mechanism. However, we have to note that we had to use a much smaller model here due to slow training times. Nevertheless, it proved effective for the task at hand.
+The first two graphs we are going to look at are an accuracy graph and an F1-score graph (Figure \ref{fig:accuracy and f1 graph} top, Figure \ref{fig:accuracy and f1 graph} bottom). We are going to analyze both of them at the same time due to their similarity. There are four model results displayed here. In red, a GATv2 model (section \ref{subsubsec:graph attention networks}) with dropout set to 0.5 and edge overlaps used as edge weights in the GCN layers is displayed\footnote{Our GAT network was composed of one GAT layer followed by three GCN layers.}. In blue, we have the same model, but in this case, the edge overlaps weren't used. Their performance is nearly similar, proving that this way of using edge overlaps, where they are used only as edge weights, is rather inefficient. In orange, we use a regular GCN model (section \ref{subsubsec:graph convolutional netwroks}) with dropout set to 0.2 and edge overlaps again used as edge weights. We can see that it is of a very similar performance to the previous two models, meaning that the GAT layers extract little additional information from the model.
+
+The standout model here is definitely the EGAT model (section \ref{subsubsec:edge graph attention network}), whose performance can be seen in Figure \ref{fig:accuracy and f1 graph} in pink. It has greatly outperformed the rest of the models, with an accuracy of 87.9\% and an F1-score of 85.13\%. This is because of the completely different way we use edge features here. Instead of just being used as edge weights, they are instead incorporated into the attention mechanism. Although this proved to be a success, it also had the downside of much slower training times. Due to this, we use a much smaller model here, as well as letting it train for fewer epochs in total. Employing batch normalization (section \ref{subsubsec:regularization functions}) did improve convergence speed significantly.
 
 \begin{figure}
 	\centering
@@ -698,7 +693,6 @@ The standout model here is the pink model. It has greatly outperformed the rest 
 	\caption[Separated graph after training]{Example of a graph obtained after training with separated haplotypes. Orange nodes represent mutated reads, while green nodes represent the original reads. We can see that the green graph in the middle is complete, but contaminated with orange nodes, while the orange nodes forming a circle around it aren't contaminated with green nodes at all, but are instead highly fragmented. This graph was obtained using the Graphia\footnotemark{} graphing tool.}
 	\label{fig:separated graph after training}
 \end{figure}
-\footnotetext{https://graphia.app/}
 
 \section{Experiments on the Whole Genome}
 \label{sec:experiments on the whole genome}
